[package]
name = "sea_orm_tstzrange"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-chrono", "with-json"] }
sqlx = { version = "0.8.2", features = ["postgres", "chrono"] }
chrono = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"